# clause-tracker

./: .env  .gitignore  README.md  angular.json  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  pnpm-lock.yaml
backend/: Dockerfile  database.py  main.py  models.py  pyproject.toml
backend/controller/: clause.py  contract.py  contract_progress.py  label.py  tag.py
backend/mutations/: clauses.py  contract_tags.py  contracts.py  labels.py  tags.py
backend/parsers/: file_parser.py
backend/queries/: clauses.py  contracts.py  labels.py  tags.py
backend/schemas/: contract.py  pydantic_models.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  angular.json  package.json  pnpm-lock.yaml
frontend/src/: index.html
frontend/src/app/: app.html  app.routes.ts  app.ts
frontend/src/app/components/contract-create/: contract-create.html  contract-create.spec.ts  contract-create.ts
frontend/src/app/components/contract-editor/: contract-editor.html  contract-editor.spec.ts  contract-editor.ts
frontend/src/app/components/contract-list/: contract-list.html  contract-list.spec.ts  contract-list.ts
frontend/src/app/components/dashboard/: dashboard.html  dashboard.ts
frontend/src/app/models/: caluse.mode.ts  caluse.model.ts  clause.model.ts  contract.model.ts  label.model.ts  tag.model.ts
frontend/src/app/pipes/: repeat-pipe.ts
frontend/src/app/services/: clause.service.ts  context.service.ts  contract.service.ts  label.service.ts  progress.service.ts  tag.service.ts
src/app/: app.spec.ts
(+9 files in other folders)
