[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.0",
  "psycopg2-binary>=2.9.12",
  "pydantic>=2.13.4",
  "sqlalchemy>=2.0.50",
  "sqlalchemy-utils>=0.42.1",
  "uvicorn[standard]>=0.34.0",
]
